# mipgen

./: CMakeLists.txt  CMakeSettings.json
include/mipgen/: mipgen.hpp
src/: mipgen.comp  mipgen.cpp
